syntax = "proto3";

import "google/protobuf/timestamp.proto";

package auth;
option go_package = "./.;auth";

// go:generate protoc --go_out=plugins=grpc:. *.proto

message UserID {
  int64 ID = 1;
}

message SessionID {
  string ID = 1;
}

message Result {
  int64 UserID = 1;
  string SessionID = 2;
  google.protobuf.Timestamp ExpireAt = 3;
}

message Nothing {
  bool dummy = 1;
}

service AuthServer {
  rpc Check(SessionID) returns (Result);
  rpc Create(UserID) returns (Result);
  rpc Delete(SessionID) returns (Nothing);
}